<resources>
    <string name="app_name">Dear Calendar</string>
    <string name="NavDrawerOpen">Open Navigation Drawer</string>
    <string name="NavDrawerClose">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="_1">1</string>
    <string name="no_events_to_show">No Events to show</string>
    <string name="create_event">Create Event</string>
    <string name="_12_00">12:00</string>
    <string name="event_title">Event Title</string>
    <string name="details">Details</string>
    <string name="end_hour">End Hour</string>
    <string name="start_hour">Start Hour</string>
    <string name="color_preview">Color Preview</string>
    <string name="Edit_Event">Edit Event</string>
    <string name="empty_error">Only the details and image fields are optional.</string>
    <string name="recurrence_error">The maximum durations are: weekly 12 months, other 120 months.</string>
    <string name="reset_confirm_text">Are you sure you want to reset the password and delete all events?</string>
    <string name="preferences">Preferences</string>
    <string name="calendar">Calendar</string>
    <string name="about">About</string>
    <string name="new_features">New Features</string>
    <string name="about_content">This application can be used to track events. Events can be created by selecting a date from the calendar. There are two types of events: simple events with no recurrence and events with recurrence.\n\nThe recurrence field specifies when an event will repeat and the recurrence duration specifies when the recurrence stops.</string>
    <string name="features_content">Images can be added to events. Note that events with recurrence will share the same image. \n\nAnother optional feature is the password protection feature, once a password is set events may be locked and unlocked and if events are locked then you will not be able to access any feature involving events.\n\n For more info read the user manual at:</string>
    <string name="view_image">View Image</string>
    <string name="back">back</string>
</resources>