<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="56dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/monthViewLayout"
    >

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/weekDays"
        >

        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>
        <TextView
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textSize="17sp"
            >
        </TextView>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/monthRecycler"
        />

</LinearLayout>