<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/monthView"
            android:title="@string/calendar"
            android:icon="@drawable/ic_baseline_home_24"
            android:checkable="true"
            />
        <item
            android:id="@+id/menuLockEvents"
            android:title="Lock Events"
            android:icon="@drawable/ic_baseline_lock_24"
            android:checkable="false"
            />
        <item
            android:id="@+id/menuUnlockEvents"
            android:title="Unlock Events"
            android:icon="@drawable/ic_baseline_lock_open_24"
            android:checkable="false"
            />


    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/options"
            android:title="@string/preferences"
           >

            <menu>
                <item
                    android:id="@+id/settings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:checkable="true"
                    />

                <item
                    android:id="@+id/help"
                    android:title="@string/help"
                    android:icon="@drawable/ic_baseline_help_24"
                    android:checkable="true"
                    />
            </menu>
        </item>
    </group>

</menu>